--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -85,3 +85,23 @@ body {
 .text-box.selected .resize-handle {
   display: block;
 }
+
+.text-box {
+    border: 1px solid transparent;
+    box-sizing: border-box;
+    position: absolute;
+}
+
+.text-box.selected {
+    border: 1px solid black;
+}
+
+.text-box > div[contenteditable="true"] {
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+}
+
+.pdf-page {
+    position: relative;
+}
